feat(docs, tests, fixs): implementation of swagger docs, tests and bug fixing
